# mucc

./: .gitignore  CMakeLists.txt  Makefile  codegen.c  codegen.h  data.s  hash.c  hash.h  jstest.js  mmlcv.c  msrcv.c  mucc.c  mucc.h  reserved.c  reserved.h  strsub.c
